--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,6 @@
 version: "3.8"
 services:
   app:
-    restart: always
     build: .
     ports:
     - "8000:8000"
@@ -11,3 +10,7 @@ services:
     image: mongo
     ports:
     - "27017:27017"
+    volumes:
+    - data-volume:/data/db
+volumes:
+  data-volume:
