--- a/package.json
+++ b/package.json
@@ -10,12 +10,13 @@
     "@hapi/inert": "^6.0.3",
     "@hapi/vision": "^6.0.1",
     "boom": "^7.3.0",
+    "chai": "^3.2.0",
+    "chai-http": "^1.0.0",
     "handlebars": "^4.7.6",
     "hapi-swagger": "^14.1.0",
     "joi": "^17.4.0",
     "mongoose": "^5.11.15"
   },
-  "devDependencies": {},
   "scripts": {
     "start": "node server.js"
   },
