--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "handlebars": "^4.7.6",
     "hapi-swagger": "^14.1.0",
     "joi": "^17.4.0",
-    "mongoose": "^5.11.15"
+    "mongoose": "^5.11.15",
+    "socket.io": "^3.1.2"
   },
   "scripts": {
     "start": "node server.js"
